[package]
name = "neutronapi"
version = "0.1.0"
edition = "2021"
description = "Interface for apps and neutron"

[dependencies]
itertools = { version = "0.10.3", default-features = false, features = [
    "use_alloc",
] }

[features]
# used by both kernel and apps/std
types = []
# used by userspace only
interface = []
